@@ -34,9 +34,22 @@ public class ChatService {
 
     // 모든 채팅방 목록 불러오기
     @Transactional(readOnly = true)
-    public List<ChatRoomDto> chatRoomList() {
+    public List<ChatRoomDto> getChatRooms() {
         List<ChatRoom> chatRooms = chatRoomRepository.findAll();
         return chatRooms.stream().map(c -> ChatRoomDto.builder().
+                roomId(c.getRoomId())
+                .roomName(c.getRoomName())
+                .userCount(c.getUserCount()).build()).collect(Collectors.toList());
+    }
+
+    // 사용자의 모든 채팅방 목록 불러오기
+    //TODO 시큐리티 세팅 필요 -> userId 가져올 필요 없어짐
+    @Transactional(readOnly = true)
+    public List<ChatRoomDto> getUserChatRooms(Long userId) {
+
+        List<ChatRoom> rooms = chatRoomUserRepository.findChatRoomsByUserId(userId);
+
+        return rooms.stream().map(c -> ChatRoomDto.builder().
                 roomId(c.getRoomId())
                 .roomName(c.getRoomName())
                 .userCount(c.getUserCount()).build()).collect(Collectors.toList());
@@ -72,24 +85,30 @@ public class ChatService {
 
     // 채팅방에 참여한 user 조회
     @Transactional(readOnly = true)
-    public List<UserInfoDto> getUserList(Long roomId) {
+    public List<UserInfoDto> getUsers(Long roomId) {
         ChatRoom chatRoom = chatRoomRepository.findById(roomId)
                 .orElseThrow(() -> new EntityNotFoundException("채팅방을 찾을 수 없습니다."));
         List<User> chatUsers = chatRoom.getChatRoomUsers().stream().map(ChatRoomUser::getUser)
-                .collect(Collectors.toList());
+                .toList();
 
         return chatUsers.stream().map(c -> UserInfoDto.builder()
-                .email(c.getEmail())
-                .nickname(c.getNickname())
-                .build()).collect(Collectors.toList());
+                        .email(c.getEmail())
+                        .nickname(c.getNickname())
+                        .build())
+                .toList();
     }
 
     // 채팅방 입장
+    // 처음 채팅방에 들어갈때만 사용하기 때문에 이후 채팅방 들어가면 호출하면 안 됨
     //TODO 시큐리티 세팅 필요 -> userId 가져올 필요 없어짐
     @Transactional
-    public ChatUserDto enterRoom(Long roomId, Long userId) {
-        User user = userRepository.findById(userId)
+    public ChatUserDto enterRoom(Long roomId, String nickname) {
+
+        // TODO 임시로 만듦 추후 밑에 주석 처리된 코드 사용, userId로 nickname 찾아서 넣어주면 됨
+        User user = userRepository.findByNickname(nickname)
                 .orElseThrow(() -> new NoSuchElementException("사용자가 존재하지 않습니다."));
+//        User user = userRepository.findById(userId)
+//                .orElseThrow(() -> new NoSuchElementException("사용자가 존재하지 않습니다."));
 
         ChatRoom chatRoom = chatRoomRepository.findById(roomId)
                 .orElseThrow(() -> new NoSuchElementException("채팅방이 존재하지 않습니다."));
@@ -144,14 +163,15 @@ public class ChatService {
         return "채팅방 나가기 완료";
     }
 
+    // 채팅 내용 리스트
     // TODO 시큐리티 세팅 필요 -> userId 가져올 필요 없어짐
     @Transactional(readOnly = true)
-    public List<ChatDto> getChatList(Long roomId, Long userId) {
+    public List<ChatDto> getChatMessages(Long roomId, Long userId) {
         User user = userRepository.findById(userId).orElseThrow(() -> new EntityNotFoundException("사용자가 존재하지 않습니다."));
         ChatRoom chatRoom = chatRoomRepository.findById(roomId)
-                .orElseThrow(() -> new EntityNotFoundException("채팅방이 존재하지 않습니다."));
+                .orElseThrow(() -> new NoSuchElementException("채팅방이 존재하지 않습니다."));
         ChatRoomUser chatRoomUser = chatRoomUserRepository.findByChatRoomAndUser(chatRoom, user)
-                .orElseThrow(() -> new EntityNotFoundException("채팅방에 참여한 사용자가 존재하지 않습니다."));
+                .orElseThrow(() -> new NoSuchElementException("채팅방에 참여한 사용자가 존재하지 않습니다."));
 
         // 찾은 채팅 내용
         List<Chat> chats = chatRepository.findAllByRoomIdAndSentAtAfter(String.valueOf(roomId),
